--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,14 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
-    "incremental": true
+    "incremental": true,
+    "paths": {
+      "@lib/user-location": [
+        "libs/user-location/src"
+      ],
+      "@lib/user-location/*": [
+        "libs/user-location/src/*"
+      ]
+    }
   }
 }
